[gd_scene load_steps=10 format=3 uid="uid://dbji8pegsqjn0"]

[ext_resource type="Script" path="res://Player.gd" id="1_dey51"]
[ext_resource type="Script" path="res://MovementPhysics.gd" id="2_b00s4"]
[ext_resource type="Shader" path="res://skew.gdshader" id="3_xd83x"]
[ext_resource type="Shader" path="res://highlight.gdshader" id="4_b2pde"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3d5xi"]
friction = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lt2mp"]
render_priority = 0
shader = ExtResource("3_xd83x")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4cnt6"]
render_priority = 0
shader = ExtResource("4_b2pde")
shader_parameter/outline_color = Color(0.811765, 0, 0, 1)
shader_parameter/luma_coef = 0.1
shader_parameter/color_coef = 0.1
shader_parameter/depth_coef = 0.8
shader_parameter/cutoff = 0.0
shader_parameter/on = false

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mvl48"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qrji7"]

[node name="Player" type="RigidBody3D"]
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_3d5xi")
script = ExtResource("1_dey51")

[node name="MovementPhysics" type="Node3D" parent="."]
script = ExtResource("2_b00s4")

[node name="GroundRay" type="RayCast3D" parent="MovementPhysics"]
transform = Transform3D(25, 0, 0, 0, 1, 0, 0, 0, 25, 0, 0, 0)
target_position = Vector3(0, -2, 0)

[node name="JumpTimer" type="Timer" parent="MovementPhysics"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_lt2mp")
material_overlay = SubResource("ShaderMaterial_4cnt6")
mesh = SubResource("CapsuleMesh_mvl48")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qrji7")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
debug_enabled = true

[connection signal="timeout" from="MovementPhysics/JumpTimer" to="MovementPhysics" method="_on_jump_timer_timeout"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
